Fix destination nav spacing

--- a/css/main.css
+++ b/css/main.css
@@ -855,7 +855,7 @@ header {
 }
 
 .destination-nav {
-  width: 60%;
+  width: 80%;
   max-width: 320px;
   display: flex;
   justify-content: space-between;
