--- a/scss/layout/_destination-nav.scss
+++ b/scss/layout/_destination-nav.scss
@@ -1,7 +1,7 @@
 @use '../abstract/colors';
 
 .destination-nav {
-    width: 60%;
+    width: 80%;
     max-width: 320px;
     display: flex;
     justify-content: space-between;
